fix last wifi network entry having extra space

--- a/modules/system/desktop-environments/leaf/ags/ags-config/Style/common.scss
+++ b/modules/system/desktop-environments/leaf/ags/ags-config/Style/common.scss
@@ -64,7 +64,7 @@ flowboxchild {
     margin-top: 0.8em;
 }
 .scrollable-item:last-child{
-    margin-top: 0.8em;
+    margin-bottom: 0.8em;
 }
 
 .toggle-window{
